--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports: plotly, magrittr, purrr, dplyr, ggplot2, stringr, pals
+Depends: 
+    R (>= 2.10)
